latest-web-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2025-01-20T10:32:03Z","generation":2,"labels":{"workload.user.cattle.io/workloadselector":"apps.deployment-aleconte-web-db"},"name":"web-db","namespace":"aleconte"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"workload.user.cattle.io/workloadselector":"apps.deployment-aleconte-web-db"}},"strategy":{" [...]
  creationTimestamp: "2025-01-20T11:24:30Z"
  generation: 3
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-aleconte-web-db
  name: web-db
  namespace: aleconte
  resourceVersion: "25527079"
  uid: de487439-6898-4b3a-bc50-0587c9914214
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-aleconte-web-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-aleconte-web-db
    spec:
      containers:
      - env:
        - name: MONGO_URI
          value: mongodb://root:example@mongodb-service:27017/yourdb
        image: amelique/amelique
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: container-0
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-01-20T11:24:30Z"
    lastUpdateTime: "2025-01-24T11:14:14Z"
    message: ReplicaSet "web-db-7cfd46f749" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-01-24T11:29:08Z"
    lastUpdateTime: "2025-01-24T11:29:08Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 3
  replicas: 3
  unavailableReplicas: 3
  updatedReplicas: 3
