webdb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: aleconte
  labels:
    app: webdb
spec:
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-aleconte-web-db
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 5000 
  type: ClusterIP
