webnodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: aleconte
spec:
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-aleconte-web-no-db
  ports:
  - protocol: TCP
    port: 80        # Port exposé par le service
    targetPort: 5000 # Port sur lequel le service écoute
  type: ClusterIP
