ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webnodb-ingress
  namespace: aleconte  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webnodb.aleconte.net4255.luxbulb.org  # URL pour webnodb
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webnodb-service 
            port:
              number: 80
  - host: webdb.aleconte.net4255.luxbulb.org  # URL pour webdb
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdb-service 
            port:
              number: 80
